add: elasticsearch
- elastic
- prepare fileInfo
