# internal/character/character_handler.go
@@ -1,33 +1,22 @@
 package character
 
 import (
-	"encoding/json"
-	"net/http"
+	"fmt"
 
-	"github.com/gorilla/mux"
+	"github.com/gin-gonic/gin"
 )
 
-// GetCharacterHandler handles GET requests to retrieve a Character by ID.
-func GetCharacterHandler(w http.ResponseWriter, r *http.Request) {
-	params := mux.Vars(r)
-	characterID := params["id"]
-
-	// Call CharacterService to get Character by ID
+// @Summary create character and insert to elasticsearch
+// @Description create character and insert to elasticsearch
+// @Accept json
+// @Produce json
+// @Tags Characters
+// @Param inputCharacter body CreateCharacterRequest true "Character JSON"
+// @Success 200 {object} Character "Successful response"
+// @Router /characters/create [post]
+func CreateCharacter(c *gin.Context) {
+	fmt.Println("CreateCharacter start....")
 	characterService := &CharacterService{}
-	character, err := characterService.GetCharacter(characterID)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusNotFound)
-		return
-	}
-
-	// Marshal Character to JSON
-	characterJSON, err := json.Marshal(character)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	w.Write(characterJSON)
+	characterService.CreateCharacter(c)
+	fmt.Println("CreateCharacter success....")
 }
